# BioInfo

./: CMakeLists.txt  README.md
data/: GCF_018283495.1_SW86_hybrid_assembly_genomic.fna  GCF_018283495.1_SW86_hybrid_assembly_genomic.fna.idxc  cmv.fasta  rtn4.fasta
projet_bioinfo_leconte/: CMakeLists.txt  test.sh
projet_bioinfo_leconte/data/: calreticulin.fasta  calreticulin.fasta.idx  calreticulin.fasta.idxc  cmv.fasta.idx  cmv.fasta.idxc  gfp.fasta  gfp.fasta.idx  gfp.fasta.idxc  rtn4.fasta.idx  rtn4.fasta.idxc
projet_bioinfo_leconte/src/: bw-build.cc  bw-search.cc
src/: bw-build.cc
